--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,23 +15,9 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/rlogo"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Restoran"
+        android:theme="@style/Base.Theme.Restoran"
         tools:targetApi="31">
-        <activity
-            android:name=".ChefDetail"
-            android:theme="@style/aboutActivity"
-            android:exported="false" />
-        <activity
-            android:name=".TableOrder"
-            android:exported="false" />
-        <activity
-            android:name=".TeamActivity"
-            android:exported="false"
-            android:theme="@style/aboutActivity" />
-        <activity
-            android:name=".AboutActivity"
-            android:exported="false"
-            android:theme="@style/aboutActivity" />
+
         <activity
             android:name=".SplashActivity"
             android:exported="true"
@@ -44,9 +30,28 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".BookTable"
+            android:theme="@style/aboutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ChefDetail"
+            android:exported="false"
+            android:theme="@style/aboutActivity" />
+        <activity
+            android:name=".TableOrder"
+            android:exported="false" />
+        <activity
+            android:name=".TeamActivity"
+            android:exported="false"
+            android:theme="@style/aboutActivity" />
+        <activity
+            android:name=".AboutActivity"
+            android:exported="false"
+            android:theme="@style/aboutActivity" />
+        <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:theme="@style/mainActivity" />
+            android:theme="@style/Base.Theme.Restoran" />
         <activity
             android:name=".LoginRegister"
             android:exported="false"
