--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:theme="@style/Base.Theme.Restoran" />
+            android:theme="@style/main2Theme" />
         <activity
             android:name=".LoginRegister"
             android:exported="false"
