--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
 dependencies {
 
 //    implementation 'com.github.RaviKoradiya:ZoomableImageView:1.1.1'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
+    implementation 'com.jsibbold:zoomage:1.3.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation "com.airbnb.android:lottie:6.2.0"
