--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher_restoran"
+        android:icon="@mipmap/ic_launcher_nrestoran"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_restoran_round"
+        android:roundIcon="@mipmap/ic_launcher_nrestoran_round"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.Restoran"
         tools:targetApi="31">
@@ -38,7 +38,7 @@
         <activity
             android:name=".BookTable"
             android:exported="false"
-            android:theme="@style/aboutActivity" />
+            android:theme="@style/orderAct" />
         <activity
             android:name=".ChefDetail"
             android:exported="false"
